# dccLive

./: CMakeLists.txt  main.cpp  runtime.cpp
auth/: admin.cpp  admin.h  token.cpp  token.h  user.cpp  user.h
log/: env.h  log.cpp  type.h
service/: console.cpp  core.cpp  header.cpp  http.cpp  mime.cpp  pool.cpp  pool.h  proto.h  response.cpp  service.h
service/live/: handler.h  manager.cpp  room.cpp  room.h
service/router/: console_route.cpp  console_service.cpp  error.cpp  router.h  server.cpp  service_route.cpp
test/: pool_test.cpp
utils/: atom.h  sha1.cpp  sha1.h  socket.h  string.h  utils.cpp
webconsole/: README.md  package.json
webconsole/public/api/: authcheck
webconsole/src/: App.vue  main.js
webconsole/src/pages/: AdminLogin.vue  LogViewer.vue  PendingPage.vue  StatusOverview.vue
webconsole/src/request/: api.js
webconsole/src/router/: index.js
webconsole/src/utils/: encodedForm.js
